improve kind configuration

--- a/luffy/k8s/cluster/dev/service.yaml
+++ b/luffy/k8s/cluster/dev/service.yaml
@@ -5,7 +5,9 @@ metadata:
 spec:
   selector:
     app: luffy
+  #type: NodePort
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
+      #nodePort: 30008
