--- a/luffy/cloud/resources/ec2/template.yml
+++ b/luffy/cloud/resources/ec2/template.yml
@@ -25,7 +25,10 @@ Resources:
         Fn::Base64:  !Sub |
           #!/bin/bash -xe
           yum update -y
-          sudo su
+          
+          echo 'export PATH="/usr/local/bin:$PATH"' >> /etc/profile
+          source /etc/profile
+
           /opt/aws/bin/cfn-init -v -s ${AWS::StackId} -r KindEC2Instance --region ${AWS::Region} -c ascending
           /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource SampleWaitCondition --region ${AWS::Region}
     Metadata:
@@ -33,27 +36,51 @@ Resources:
       AWS::CloudFormation::Init:
         configSets:
           ascending:
+            - "kubetools"
             - "docker"
-            - "kind"
+            - "kindtools"
+  #          - "config"
             - "cluster"
+        kubetools:
+          commands:
+            install-kubetools:
+              command:  |
+                cd ./home/ec2-user
+                curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl
+                chmod +x ./kubectl
+                sudo mv ./kubectl /usr/local/bin/kubectl
         docker:
           commands:
             install-docker:
               command:  yum install docker -y
             start-docker:
               command:  systemctl start docker
-        kind:
-          commands:
-            move-home:
-              command:  cd ./home/ec2-user
-            get-kind:
-              command:  curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.20.0/kind-linux-amd64 && chmod +x ./kind && sudo mv ./kind /usr/local/bin/kind
-            export-bin-folder:
-              command:  export PATH="/usr/local/bin:$PATH"
+        kindtools:
+          commands: 
+            install-kindtools:
+              command: |
+                cd ./home/ec2-user
+                curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.20.0/kind-linux-amd64
+                chmod +x ./kind
+                sudo mv ./kind /usr/local/bin/kind
+        # config:
+        #   files: 
+        #     /home/ec2-user/multi-cluster.yaml: 
+        #       content: |
+        #         kind: Cluster
+        #         apiVersion: kind.x-k8s.io/v1alpha4
+        #         nodes:
+        #         - role: control-plane
+        #         - role: worker
         cluster:
           commands:
             create-kind-cluster:
-              command:  "kind create cluster --name luffy-cluster"
+              command: |
+                cd ./home/ec2-user
+                mkdir .kube
+                kind create cluster --name luffy-cluster --kubeconfig .kube/config
+      # colocar o arquvivo ./kube/config no /root/./kube/config  (precisa de permissão)
+
     DependsOn: KindSecurityGroup
 
   SampleWaitCondition:
