--- a/luffy/cloud/resources/ec2/template.yml
+++ b/luffy/cloud/resources/ec2/template.yml
@@ -5,17 +5,18 @@ Description:
 
 Resources:
 
-  KindKeyPair:
-    Type: 'AWS::EC2::KeyPair'
-    Properties:
-      KeyName: KindKeyPairCluster
+  # KindKeyPair:
+  #   Type: 'AWS::EC2::KeyPair'
+  #   Properties:
+  #     KeyName: KindKeyPairCluster
   
   KindEC2Instance: 
     Type: AWS::EC2::Instance
     Properties: 
-      InstanceType: "t2.micro"
-      ImageId: "ami-0453898e98046c639"
-      KeyName: !Ref KindKeyPair
+      InstanceType: "t2.medium"
+      ImageId: "ami-051f7e7f6c2f40dc1"
+      #KeyName: !Ref KindKeyPair
+      KeyName: EC2-TUTORIAL
       NetworkInterfaces: 
       - AssociatePublicIpAddress: "true"
         DeviceIndex: "0"
@@ -28,7 +29,7 @@ Resources:
           
           echo 'export PATH="/usr/local/bin:$PATH"' >> /etc/profile
           source /etc/profile
-
+          
           /opt/aws/bin/cfn-init -v -s ${AWS::StackId} -r KindEC2Instance --region ${AWS::Region} -c ascending
           /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource SampleWaitCondition --region ${AWS::Region}
     Metadata:
@@ -39,7 +40,7 @@ Resources:
             - "kubetools"
             - "docker"
             - "kindtools"
-  #          - "config"
+            - "config"
             - "cluster"
         kubetools:
           commands:
@@ -63,23 +64,49 @@ Resources:
                 curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.20.0/kind-linux-amd64
                 chmod +x ./kind
                 sudo mv ./kind /usr/local/bin/kind
-        # config:
-        #   files: 
-        #     /home/ec2-user/multi-cluster.yaml: 
-        #       content: |
-        #         kind: Cluster
-        #         apiVersion: kind.x-k8s.io/v1alpha4
-        #         nodes:
-        #         - role: control-plane
-        #         - role: worker
+        config:
+          files: 
+            /home/ec2-user/sample-cluster.yaml: 
+              content: |
+                kind: Cluster
+                apiVersion: kind.x-k8s.io/v1alpha4
+                nodes:
+                - role: control-plane
+                - role: worker
+              mode: "000644"
+              owner: "root"
+              group: "root"
         cluster:
           commands:
             create-kind-cluster:
               command: |
                 cd ./home/ec2-user
                 mkdir .kube
-                kind create cluster --name luffy-cluster --kubeconfig .kube/config
-      # colocar o arquvivo ./kube/config no /root/./kube/config  (precisa de permissão)
+                kind create cluster --name luffy-cluster --config sample-cluster.yaml   --kubeconfig .kube/config
+                sudo cp -r /home/ec2-user/.kube /root
+
+      # source ./etc/profile
+
+
+      # sudo yum update -y
+      # sudo yum install nginx -y
+      # sudo systemctl start nginx
+      # sudo systemctl enable nginx
+      # sudo vim /etc/nginx/conf.d/reverse-proxy.conf
+      # server {
+      #     listen 80;
+      #     server_name 54.234.58.4;
+
+      #     location / {
+      #         proxy_pass http://172.18.0.2:30004;
+      #         proxy_set_header Host $host;
+      #         proxy_set_header X-Real-IP $remote_addr;
+      #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      #     }
+      # }
+      # sudo nginx -t
+      # sudo systemctl reload nginx
+
 
     DependsOn: KindSecurityGroup
 
