change sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 # Organization and project keys are displayed in the right sidebar of the project homepage
 sonar.organization=project-serverless
-sonar.projectKey=project-serverless
+sonar.projectKey=aws-serverless
 sonar.host.url=https://sonarcloud.io
-sonar.projectBaseDir=/Users/idasilva/go-work/src/github.com/idasilva/aws-serverless/luffy
+sonar.projectBaseDir=./luffy
 # --- optional properties ---
 
 # defaults to project key
