--- a/luffy/k8s/cluster/dev/service-luffy.yaml
+++ b/luffy/k8s/cluster/dev/service-luffy.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: luffy-service
+  namespace: sunny
 spec:
   selector:
     app: luffy
-  #type: NodePort
+  type: NodePort
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-      #nodePort: 30008
+    - port: 80
+      targetPort: 8080
+      nodePort: 30008
