--- a/luffy/k8s/cluster/dev/nginx-ingress.yaml
+++ b/luffy/k8s/cluster/dev/nginx-ingress.yaml
@@ -2,20 +2,26 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: luffy-ingress
+  namespace: sunny
   # annotations:
   #   nginx.ingress.kubernetes.io/auth-type: basic
   #   nginx.ingress.kubernetes.io/auth-secret: username
   #   nginx.ingress.kubernetes.io/auth-secret-type: password
 spec:
   ingressClassName: nginx
+  # criar um handler para rotas não existentes.
+  # defaultBackend:
+  #   service:
+  #     name: error
+  #     port:
+  #       name: svc-port
   rules:
-  - host: apis.chapahals.com
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: luffy-service
-            port:
-              number: 80
+    - http:
+        paths:
+        - path: /v1/version
+          pathType: Prefix
+          backend:
+            service:
+              name: luffy-service
+              port:
+                name: luffy-svc-port
