--- a/luffy/cloud/resources/codebuild/sonar-codebuild.yaml
+++ b/luffy/cloud/resources/codebuild/sonar-codebuild.yaml
@@ -7,7 +7,7 @@ Resources:
   SonarPipeline:
     Type: AWS::CodeBuild::Project
     Properties:
-      Name: sonar-pipeline
+      Name: sonar-project
       Description: this project was build to review software quality
       ServiceRole: !Ref SonarProjectRole
       Artifacts:
@@ -15,8 +15,18 @@ Resources:
       Environment:
         Type: LINUX_CONTAINER
         ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/standard:3.0
+        Image: 560978416398.dkr.ecr.sa-east-1.amazonaws.com/sonar:0.0.1
         PrivilegedMode: true
+        EnvironmentVariables:
+            - Name: HOST
+              Value: VALUE
+              Type: PLAINTEXT
+            - Name: PROJECT
+              Value: VALUE
+              Type: PLAINTEXT
+            - Name: SONAR_TOKEN
+              Value: VALUE
+              Type: PLAINTEXT
       Source:
         GitCloneDepth: 1
         Location: https://github.com/idasilva/aws-serverless
