deploy eks using terraform

--- a/luffy/k8s/cluster/dev/nginx-ingressa-app.yaml
+++ b/luffy/k8s/cluster/dev/nginx-ingressa-app.yaml
@@ -16,13 +16,13 @@ spec:
   #     port:
   #       name: svc-port
   rules:
-    - host: apis.chapahals.com
-      http:
-          paths:
-          - path: /v1/version
-            pathType: Prefix
-            backend:
-              service:
-                name: luffy-service
-                port:
-                  name: luffy-svc-port
+    # - host: apis.chapahals.com
+    - http:
+        paths:
+        - path: /v1/version
+          pathType: Prefix
+          backend:
+            service:
+              name: luffy-service
+              port:
+                name: luffy-svc-port
