add argocd package

--- a/pipecid/.cd-golang.yaml
+++ b/pipecid/.cd-golang.yaml
@@ -6,9 +6,12 @@ app:
 
 gitops:
   argocd:
+    server: 
+      url:
+      username:
+      password:
     app:
       name: luffy
-    username: 
-    password:
+
 
 
