--- a/.github/workflows/assume-role.yml
+++ b/.github/workflows/assume-role.yml
@@ -11,7 +11,7 @@ on:
 env:
   
   AWS_REGION : "us-east-1" #Change to reflect your Region
-
+  AWS_ACCOUNT_ID : "123456789" #Change to reflect your Region
 # Permission can be added at job level or workflow level    
 permissions:
       id-token: write   # This is required for requesting the JWT
@@ -25,7 +25,7 @@ jobs:
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1.7.0
         with:
-          role-to-assume: arn:aws:iam::560978416398:role/GitHubAction-AssumeRoleWithAction. #change to reflect your IAM role’s ARN
+          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/GitHubAction-AssumeRoleWithAction. #change to reflect your IAM role’s ARN
           role-session-name: GitHubAction-AssumeRoleWithAction.
           aws-region: ${{ env.AWS_REGION }}
       # Hello from AWS: WhoAmI
