test sonar cloud
Signed-off-by: Isaias da Silva <isaias.carvalho906@gmail.com>

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,6 @@
 # Organization and project keys are displayed in the right sidebar of the project homepage
-sonar.organization=project-serverless
-sonar.projectKey=aws-serverless
-sonar.host.url=https://sonarcloud.io
+sonar.projectKey=idasilva_monoideas
+sonar.organization=idasilva
 sonar.projectBaseDir=./luffy
 # --- optional properties ---
 
