add sonar comunnity workflow

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,5 @@
 # Organization and project keys are displayed in the right sidebar of the project homepage
-sonar.projectKey=idasilva_monoideas
-sonar.organization=idasilva
+sonar.projectKey=monoideas
 sonar.projectBaseDir=./luffy
 # --- optional properties ---
 
