--- a/.github/workflows/sonar-community.yml
+++ b/.github/workflows/sonar-community.yml
@@ -12,10 +12,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        # Disabling shallow clones is recommended for improving the relevancy of reporting
         fetch-depth: 0
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
       env:
-        SONAR_TOKEN: sqp_c447ffebc8c7fe9b701ef38c90fd8a145ef17454
-        SONAR_HOST_URL: http://ae9b8a68d031d4c4a85f2d406bc8f02f-1451157965.sa-east-1.elb.amazonaws.com
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
