add env to jobs

--- a/.github/workflows/sonar-community.yml
+++ b/.github/workflows/sonar-community.yml
@@ -9,6 +9,7 @@ name: Main Workflow
 jobs:
   sonarqube:
     runs-on: ubuntu-latest
+    environment: Development
     steps:
     - uses: actions/checkout@v3
       with:
