--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,15 +1,13 @@
-# Organization and project keys are displayed in the right sidebar of the project homepage
 sonar.projectKey=monoideas
-sonar.projectBaseDir=./luffy
-# --- optional properties ---
+sonar.projectVersion=0.0.1
 
-# defaults to project key
-#sonar.projectName=My project
-# defaults to 'not provided'
-#sonar.projectVersion=1.0
+sonar.sourceEncoding=UTF-8.
+sonar.sources=./nextjs-template/app
 
-# Path is relative to the sonar-project.properties file. Defaults to .
-#sonar.sources=.
+sonar.tests=./nextjs-app/**/__tests__/*
+sonar.coverage.exclusions=**/__tests__/*
+sonar.test.inclusions=./nextjs-app/**test.js
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.javascript.lcov.reportPaths=./nextjs-app/coverage/lcov.info
+
+sonar.eslint.reportPaths = ./nextjs-app/eslint_report.json
