--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=monoideas
 sonar.projectVersion=0.0.1
 
 sonar.sourceEncoding=UTF-8.
-sonar.sources=./nextjs-template/app
+sonar.sources=./nextjs-app/app
 
 sonar.tests=./nextjs-app/**/__tests__/*
 sonar.coverage.exclusions=**/__tests__/*
