--- a/.github/workflows/sonar-community-node.yml
+++ b/.github/workflows/sonar-community-node.yml
@@ -12,12 +12,16 @@ jobs:
   sonarqube:
     runs-on: ubuntu-latest
     environment: Development
+    defaults:
+      run:
+        working-directory: ./nextjs-app
 
     steps:
 
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
+
     - uses: actions/setup-node@v2
       with:
         node-version: "16"
