remove wildcard from sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,11 +2,11 @@ sonar.projectKey=monoideas
 sonar.projectVersion=0.0.1
 
 sonar.sourceEncoding=UTF-8.
-sonar.sources=./nextjs-app/app
+sonar.sources=./nextjs-app/src
 
-sonar.tests=./nextjs-app/**/__tests__/*
-sonar.coverage.exclusions=**/__tests__/*
-sonar.test.inclusions=./nextjs-app/**test.js
+sonar.tests=./nextjs-app/src/
+sonar.coverage.exclusions=**/__tests__/*,**/*.spec.*,src/pages/_app.tsx,src/pages/_document.tsx
+sonar.test.inclusions=./nextjs-app/src/**/__tests__/*
 
 sonar.javascript.lcov.reportPaths=./nextjs-app/coverage/lcov.info
 
