remove unsupported caracter

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=monoideas
 sonar.projectVersion=0.0.1
 
-sonar.sourceEncoding=UTF-8.
+sonar.sourceEncoding=UTF-8
 sonar.sources=./nextjs-app/src
 
 sonar.tests=./nextjs-app/src/
