--- a/.github/workflows/sonar-community-node.yml
+++ b/.github/workflows/sonar-community-node.yml
@@ -43,3 +43,16 @@ jobs:
       env:
        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+    
+    - name: Set up Sonar Quality Gate
+      uses: dieuhd/sonar-quality-gate@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.TOKEN }} 
+        GIT_URL: "https://api.github.com"
+        SONAR_URL:  ${{ secrets.SONAR_HOST_URL }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+      with:
+        login:  ${{ secrets.SONAR_TOKEN }}
+        url:  ${{ secrets.SONAR_HOST_URL }}
+        projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
