--- a/.github/workflows/sonar-community-node.yml
+++ b/.github/workflows/sonar-community-node.yml
@@ -18,40 +18,47 @@ jobs:
 
     steps:
 
-    - uses: actions/checkout@v3
+    # - uses: actions/checkout@v3
+    #   with:
+    #     fetch-depth: 0
+
+    # - uses: actions/setup-node@v2
+    #   with:
+    #     node-version: "16"
+
+    # - run: npm install
+    
+    # - run: npm run test:coverage
+
+    # - name: SonarQube Scan
+    #   uses: sonarsource/sonarqube-scan-action@master
+    #   env:
+    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+    
+    # - name: SonarQube Quality Gate check
+    #   id: sonarqube-quality-gate-check
+    #   uses: sonarsource/sonarqube-quality-gate-action@master
+    #   timeout-minutes: 5
+    #   env:
+    #    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    #    SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
+    - name: Checkout
+      uses: actions/checkout@v2.3.4
       with:
         fetch-depth: 0
-
-    - uses: actions/setup-node@v2
-      with:
-        node-version: "16"
-
-    - run: npm install
-    
-    - run: npm run test:coverage
-
-    - name: SonarQube Scan
-      uses: sonarsource/sonarqube-scan-action@master
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-    
-    - name: SonarQube Quality Gate check
-      id: sonarqube-quality-gate-check
-      uses: sonarsource/sonarqube-quality-gate-action@master
-      timeout-minutes: 5
-      env:
-       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-       SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-    
+  
     - name: Set up Sonar Quality Gate
       uses: dieuhd/sonar-quality-gate@v1
       env:
         GITHUB_TOKEN: ${{ secrets.TOKEN }} 
         GIT_URL: "https://api.github.com"
-        SONAR_URL:  ${{ secrets.SONAR_HOST_URL }}
+        GIT_TOKEN: ${{ secrets.TOKEN }} 
+        SONAR_URL: ${{ secrets.SONAR_HOST_URL }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
       with:
         login:  ${{ secrets.SONAR_TOKEN }}
-        skipScanner:  true
+        url: ${{ secrets.SONAR_HOST_URL }}
+        projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
