test anothe pluguin

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,14 @@
 sonar.projectKey=monoideas
 sonar.projectVersion=0.0.1
-CI_MERGE_REQUEST_IID=18
 
+sonar.sourceEncoding=UTF-8
+sonar.sources=./nextjs-app/src
+
+sonar.tests=./nextjs-app/src/
+sonar.coverage.exclusions=**/__tests__/*,**/*.spec.*,src/pages/_app.tsx,src/pages/_document.tsx
+sonar.test.inclusions=./nextjs-app/src/**/__tests__/*
+
+sonar.javascript.lcov.reportPaths=./nextjs-app/coverage/lcov.info
+
+sonar.eslint.reportPaths=./nextjs-app/eslint_report.json
 sonar.qualitygate.wait=true
