--- a/.github/workflows/sonar-community-node.yml
+++ b/.github/workflows/sonar-community-node.yml
@@ -44,20 +44,32 @@ jobs:
     #    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     #    SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-    - name: Checkout
-      uses: actions/checkout@v2.3.4
-      with:
-        fetch-depth: 0
+    # - name: Checkout
+    #   uses: actions/checkout@v2.3.4
+    #   with:
+    #     fetch-depth: 0
   
-    - name: Set up Sonar Quality Gate
-      uses: dieuhd/sonar-quality-gate@v1.2.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.TOKEN }} 
-        GIT_URL: "https://api.github.com"
-        GIT_TOKEN: ${{ secrets.TOKEN }} 
-        SONAR_URL: ${{ secrets.SONAR_HOST_URL }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
-      with:
-        login:  ${{ secrets.SONAR_TOKEN }}
-        skipScanner: true
+    # - name: Set up Sonar Quality Gate
+    #   uses: dieuhd/sonar-quality-gate@v1.2.0
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.TOKEN }} 
+    #     GIT_URL: "https://api.github.com"
+    #     GIT_TOKEN: ${{ secrets.TOKEN }} 
+    #     SONAR_URL: ${{ secrets.SONAR_HOST_URL }}
+    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    #     SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+    #   with:
+    #     login:  ${{ secrets.SONAR_TOKEN }}
+    #     skipScanner: true
+
+    test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: phwt/sonarqube-quality-gate-action@v1
+        id: quality-gate-check
+        with:
+          sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
+          sonar-host-url: ${{ secrets.SONAR_HOST_URL }}
+          sonar-token: ${{ secrets.SONAR_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main # Optional input
