--- a/.github/workflows/sonar-community-node.yml
+++ b/.github/workflows/sonar-community-node.yml
@@ -18,17 +18,17 @@ jobs:
 
     steps:
 
-    # - uses: actions/checkout@v3
-    #   with:
-    #     fetch-depth: 0
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
-    # - uses: actions/setup-node@v2
-    #   with:
-    #     node-version: "16"
+    - uses: actions/setup-node@v2
+      with:
+        node-version: "16"
 
-    # - run: npm install
+    - run: npm install
     
-    # - run: npm run test:coverage
+    - run: npm run test:coverage
 
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
