--- a/.github/workflows/sonar-community-node.yml
+++ b/.github/workflows/sonar-community-node.yml
@@ -45,3 +45,7 @@ jobs:
     
       - name: SonarQube Quality Gate check
         uses: sonarsource/sonarqube-quality-gate-action@master
+        timeout-minutes: 5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
