--- a/.github/workflows/sonar-community-node.yml
+++ b/.github/workflows/sonar-community-node.yml
@@ -41,7 +41,7 @@ jobs:
           sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
           sonar-host-url: ${{ secrets.SONAR_HOST_URL }}
           sonar-token: ${{ secrets.SONAR_TOKEN }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.TOKEN }}
     
       - name: SonarQube Quality Gate check
         uses: sonarsource/sonarqube-quality-gate-action@master
