--- a/.github/workflows/ec2_endpoint.yml
+++ b/.github/workflows/ec2_endpoint.yml
@@ -37,7 +37,7 @@ jobs:
             --connection-type eice \
             --os-user ubuntu \
             --region us-east-1 \
-            --eice-options maxTunnelDuration=900<<EOT
-              ls -a 
-              exit
-EOT
+            --eice-options maxTunnelDuration=900 <<'    EOT'
+              echo "Executing command block 1"
+              ls -a
+          EOT
