--- a/.github/workflows/ec2_endpoint.yml
+++ b/.github/workflows/ec2_endpoint.yml
@@ -32,5 +32,10 @@ jobs:
       - name: Interface Endpoint
         id: rollback
         run: |
-          ls -a
-          ./deploy.sh
+          aws ec2-instance-connect ssh  \
+            --instance-id i-0560fb61b4ed18c3a \
+            --connection-type eice  \
+            --os-user ubuntu  \
+            --region us-east-1  \
+            --private-key-file ./endpoint.pem \
+            --eice-options maxTunnelDuration=900
