--- a/.github/workflows/ec2_endpoint.yml
+++ b/.github/workflows/ec2_endpoint.yml
@@ -16,7 +16,6 @@ jobs:
       id-token: write
       contents: read
 
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -35,12 +34,4 @@ jobs:
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
           ssh-keyscan -H "172.31.111.208" >> ~/.ssh/known_hosts
-          aws ec2-instance-connect ssh  \
-            --instance-id i-0560fb61b4ed18c3a \
-            --instance-ip 172.31.111.208 \
-            --connection-type eice  \
-            --os-user ubuntu  \
-            --region us-east-1  \
-            --private-key-file ./endpoint.pem   \
-            --eice-options maxTunnelDuration=900 \
-            --no-cli-auto-prompt
+          ./deploy.sh
