--- a/.github/workflows/ec2_endpoint.yml
+++ b/.github/workflows/ec2_endpoint.yml
@@ -36,6 +36,12 @@ jobs:
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
           ssh-keyscan -H "172.31.111.208" >> ~/.ssh/known_hosts
-          ls -a
-          ./deploy.sh
-          ls -a
+          aws ec2-instance-connect ssh  \
+            --instance-id i-0560fb61b4ed18c3a \
+            --instance-ip 172.31.111.208 \
+            --connection-type eice  \
+            --os-user ubuntu  \
+            --region us-east-1  \
+            --private-key-file ./endpoint.pem   \
+            --eice-options maxTunnelDuration=900 \
+            --no-cli-auto-prompt
